codex-rs/core/tests/suite/snapshots/all__suite__compact__pre_turn_compaction_including_incoming_shapes.snap
---
source: core/tests/suite/compact.rs
assertion_line: 4960
expression: "format_history_snapshot(\"Pre-turn auto-compaction uses the prior context without the incoming user message; the follow-up carries the cwd override, image, and text.\",\n&requests)"
---
Scenario: Pre-turn auto-compaction uses the prior context without the incoming user message; the follow-up carries the cwd override, image, and text.

## Window 1
-- request 1 (turn) --
00:message/developer:
    <PERMISSIONS_INSTRUCTIONS>
01:message/user:
    <ENVIRONMENT_CONTEXT>
02:message/user:
    USER_ONE
-- request 2 (turn) --
03:message/assistant:
    FIRST_REPLY
04:message/user:
    USER_TWO

## Window 2 (after request 2: settings changed (parallel_tool_calls, text, tools))
-- request 3 (compaction) --
00:message/developer:
    <PERMISSIONS_INSTRUCTIONS>
01:message/user:
    <ENVIRONMENT_CONTEXT>
02:message/user:
    USER_ONE
03:message/assistant:
    FIRST_REPLY
04:message/user:
    USER_TWO
05:message/assistant:
    SECOND_REPLY
06:message/user:
    <SUMMARIZATION_PROMPT>

## Window 3 (after request 3: input diverged at item 00, settings changed (parallel_tool_calls, text, tools))
-- request 4 (turn) --
00:message/user:
    USER_ONE
01:message/user:
    USER_TWO
02:message/user:
    <COMPACTION_SUMMARY>
    PRE_TURN_SUMMARY
03:message/developer:
    <PERMISSIONS_INSTRUCTIONS>
04:message/user:
    <ENVIRONMENT_CONTEXT>
05:message/user[2]:
    [01] <input_image:detail,image_url>
    [02] USER_THREE
